--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "php": "^7.0"
     },
     "autoload": {
-        "psr-4": {
-            "minifast-orm\\": "src/"
-        }
+        "files": [
+            "src/autoload.php"
+        ] 
     }
 }
