--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "itechcydia/minifast-orm",
+    "name": "minifast/minifast-orm",
     "description": "A little ORM, very simple to use and ultra fast",
     "license": "MIT",
     "authors": [
         {
             "name": "Vincent Bathelier",
             "email": "vincent.bathelier98@gmail.com",
-            "homepage": "http://minifast.itechcydia.fr",
+            "homepage": "https://getminifast.org",
             "role": "Developer"
         }
     ],
