--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,10 @@
     "autoload": {
         "files": [
             "src/autoload.php"
-        ] 
+        ],
+        "psr-4": {
+            "MiniFastORM\\": "src/base/",
+            "MiniFastORM\Table\\": "../tables/"
+        }
     }
 }
